--- a/mako_templates/footer.html
+++ b/mako_templates/footer.html
@@ -1,14 +1,12 @@
-        <div style="clear: both;"></div>
-        <hr/>
-        <div style="font-size: 0.675em; white-space: nowrap; float: right; text-align: right;">
-            <span>Game server: ${site['game_server']}</span><br/>
-            <span>All timestamps displayed in your local time</span><br/>
+            <footer>
+                <span>This service is built, maintained, and hosted by a player like you, please exclude this site from your adblocker, if you run one.</span>
+                <div class="pull-right">
+                <a href="#">Game server: ${site['game_server']}</a><a href="#">All timestamps displayed in your local time</a>
+                </div>
+            </footer>
         </div>
-        <div style="font-style: italic; font-size: 0.675em; white-space: nowrap; float: left;">
-            <!--Stick an AdWords thing here-->
-            <br/>
-            This service is built, maintained, and hosted by a player like you;
-            please exclude this site from your adblocker, if you run one.
-        </div>
+        <script src="https://cdn.jsdelivr.net/jquery/2.0.0/jquery.min.js" integrity="sha256-1IKHGl6UjLSIT6CXLqmKgavKBXtr0/jJlaGMEkh+dhw=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/jquery.migrate/1.4.1/jquery-migrate.min.js" integrity="sha256-q5a5C59JLG0CRBK1v3IXIL711uFqN1j1nC/j8LPkQzc=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </body>
 </html>
