--- a/mako_templates/footer.html
+++ b/mako_templates/footer.html
@@ -5,8 +5,7 @@
                 </div>
             </footer>
         </div>
-        <script src="https://cdn.jsdelivr.net/jquery/2.0.0/jquery.min.js" integrity="sha256-1IKHGl6UjLSIT6CXLqmKgavKBXtr0/jJlaGMEkh+dhw=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/jquery.migrate/1.4.1/jquery-migrate.min.js" integrity="sha256-q5a5C59JLG0CRBK1v3IXIL711uFqN1j1nC/j8LPkQzc=" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <script src="/static/js/tether.min.js"></script><!-- Tether for Bootstrap --> 
+        <script src="/static/js/bootstrap.min.js"></script>
     </body>
 </html>
