--- a/mako_templates/header.html
+++ b/mako_templates/header.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>${site['site_name']} - ${page['title']}</title>
         <meta name="description" content="${site['site_name']} is a crowd-sourced database of market board information for Final Fantasy XIV" />
         <meta name="keywords" content="FFXIV, Final Fantasy XIV, Heavensward, Realm Reborn, Marketboard, Market" />
@@ -18,71 +18,59 @@
         %endfor
         
         <!--Base CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <link href="/static/css//font-awesome.min.css" rel="stylesheet" />
         
         <!--Main Style -->
         <link href="/static/css/style.css" rel="stylesheet">
 
+        <script src="https://cdn.jsdelivr.net/jquery/2.1.4/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/jquery.migrate/1.4.1/jquery-migrate.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
     </head>
     <body>
-    <div class="headerbar">
-        <div class="headerbar-left">
-            <div class="logo">
-                <a href="/"><h1>${site['site_name']}</h1></a>
-            </div>
-            <%doc>
-            <button class="button-menu-mobile open-left">
-            <i class="fa fa-bars"></i>
-            </button>
-            </%doc>
-        </div>
-
         <!-- Navigation -->
 
          <nav class="navbar navbar-default" role="navigation">
-             <div class="container">
-                    <div class="navbar-collapse2">
-                        <ul class="nav navbar-nav hidden-xs">
+         <a class="navbar-brand" href="#">${site['site_name']}</a>
+                        <ul class="nav navbar-nav">
                             <li class="nav-item active">
                             %if role['active']:
-                            Welcome, <a class="nav-link" href="/users/${identity['user_id']}">${identity['user_name']}</a>
+                            <a class="nav-link" href="/users/${identity['user_id']}">${identity['user_name']}</a>
                             %endif
                             </li>
+                            <li class="nav-item active"><a class="nav-link" href="/about">About</a></li>
                             %if role['moderator']:
-                            <li class="nav-item active"><a class="nav-link" href="/flags">flags (${notifications['flags']})</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="/users">users</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="/flags">Flags (${notifications['flags']})</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="/users">Users</a></li>
                             %endif
                             %if role['active']:
-                            <li class="nav-item active"><a class="nav-link" href="/logout">logout</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="/logout">Logout</a></li>
                             %endif
-                            <li class="nav-item active"><a class="nav-link" href="/about">about</a></li>
                             </ul>
-                    </div>
-            </div>
-         </nav>
-    </div>
-    <div class="left side-menu">
-                    %if role['active']:
-                    <br/>
-                    <form action="/items/price-update" method="post" style="display: inline;">
-                        <input type="text" name="name" id="itemselect" required/>
-                        @
-                        <input type="number" name="value" min="0" max="999999999" size="9" autocomplete="off"/>
-                        gil
-                        <input type="submit" value="go"/>
-                    </form>
-                    %if role['active']:
-                        <script>
+                            %if role['active']:
+                              <form ction="/items/price-update" method="post" class="form-inline pull-xs-right">
+                              <label for="itemselect" class="col-sm-2 form-control-label">Add Item Price</label>
+                                <input class="form-control" type="text" name="name" id="itemselect" placeholder="Item Name" required>
+                                <div class="form-group">
+                                    <label class="sr-only" for="exampleInputAmount">Price</label>
+                                    <div class="input-group">
+                                    <input type="number" name="value" min="0" max="999999999" size="9" autocomplete="off" class="form-control" placeholder="Amount">
+                                </div>
+
+                                <button class="btn btn-success-outline" type="submit" type="submit" value="go">Go</button>
+                              </form>
+
+                            <script>
                             $(function(){
                                 var items = [${','.join('"{item}"'.format(item=i) for i in page['all_item_names'])}];
                                 $("#itemselect").autocomplete({
                                     source: items
                                 });
                             });
-                        </script>
-                    %endif  
-                %endif
-            </div>
+                            </script>
+                            %endif
+         </nav>
     </div>
     <div class="content">
