--- a/mako_templates/moderators.html
+++ b/mako_templates/moderators.html
@@ -3,7 +3,7 @@
 <div class="about-topic">
     <span class="about-header">What are moderators?</span><br/>
     Moderators are volunteers responsible for ensuring the integrity of price
-    data and controlling user access to ${site['site_name']}.
+    data and controlling user access to ${CONFIG['server']['meta']['site_name']}.
     <br/><br/>
     Moderators will only approve your registration if your in-game name matches
     that with which you registered.
@@ -12,9 +12,9 @@
     <span class="about-header">Can I be a moderator?</span><br/>
     As a volunteer role, it carries the burden of responsibility with no real
     reward. The nature of managing a competitive database further requires that
-    moderators be highly disciplined and professional: anyone selected for this
-    position must be someone who can resist the urge to ban another player for
-    undercutting them or orchestrating a price-war.
+    moderators be professional: anyone selected for this position must be
+    someone who can resist the urge to ban another player for undercutting them
+    or orchestrating a price-war.
     <br/><br/>
     Please do not inquire about this. If you are suitable, you will be referred.
 </div>
