--- a/mako_templates/footer.html
+++ b/mako_templates/footer.html
@@ -1,13 +1,13 @@
         <div style="clear: both;"></div>
         <hr/>
         <div style="font-size: 0.675em; white-space: nowrap; float: right; text-align: right;">
-            <span>Game server: ${site['game_server']}</span><br/>
+            <span>Game server: ${CONFIG['server']['meta']['game_server']}</span><br/>
             <span>All timestamps displayed in your local time</span><br/>
         </div>
         <div style="font-style: italic; font-size: 0.675em; white-space: nowrap; float: left;">
             <!--Stick an AdWords thing here-->
             <br/>
-            This service is built, maintained, and hosted by a player like you;
+            This service is built, maintained, and hosted by players like you;
             please exclude this site from your adblocker, if you run one.
         </div>
     </body>
