Revised the organisation of the config file

--- a/mako_templates/about_body.html
+++ b/mako_templates/about_body.html
@@ -1,9 +1,9 @@
 <div class="about-topic">
     <span class="about-header">What is this site?</span><br/>
-    ${CONFIG['server']['meta']['site_name']} is a crowd-sourced database of
-    market board information for ${CONFIG['server']['meta']['game_server']},
-    freely shared under the belief that knowing market trends will help both
-    crafters and gatherers profit, without encouraging a
+    ${CONFIG['meta']['site_name']} is a crowd-sourced database of market board
+    information for ${CONFIG['meta']['game_server']}, freely shared under the
+    belief that knowing market trends will help both crafters and gatherers
+    profit, without encouraging a
     <a href="https://en.wikipedia.org/wiki/Prisoner%27s_dilemma">Prisoner's Dilemma</a>
     environment.
 </div>
@@ -73,7 +73,7 @@
 <div class="about-topic">
     <span class="about-header">How does authorisation work?</span><br/>
     When you request access, you must provide your character's name on
-    ${CONFIG['server']['meta']['game_server']}. This will create a profile for
+    ${CONFIG['meta']['game_server']}. This will create a profile for
     you with its status set to "unconfirmed". 
     <br/><br/>
     At this point, you must message a <a href="/users/moderators">moderator</a>
@@ -89,8 +89,8 @@
 </div>
 <div class="about-topic">
     <span class="about-header">Something broke or someone's abusing the site</span><br/>
-    The site's administrator is ${CONFIG['server']['meta']['admin_name']}; send
-    a tell in-game or send e-mail to ${CONFIG['server']['meta']['admin_email']}.
+    The site's administrator is ${CONFIG['meta']['admin_name']}; send
+    a tell in-game or send e-mail to ${CONFIG['meta']['admin_email']}.
     <br/><br/>
     <a href="/users/moderators">Moderators</a> have been appointed and can help with
     cases of price vandalism or fake items.
