--- a/mako_templates/error.html
+++ b/mako_templates/error.html
@@ -4,8 +4,8 @@
 %if 500 <= error_code < 600:
     <br/>
     This problem could be caused by ongoing site development; if it persists for
-    more than half an hour, contact ${CONFIG['server']['meta']['admin_name']} or
-    send e-mail to ${CONFIG['server']['meta']['admin_email']}.
+    more than half an hour, contact ${CONFIG['meta']['admin_name']} or
+    send e-mail to ${CONFIG['meta']['admin_email']}.
 %endif
 
 <%include file="footer.html"/>
