--- a/mako_templates/footer.html
+++ b/mako_templates/footer.html
@@ -1,7 +1,7 @@
         <div style="clear: both;"></div>
         <hr/>
         <div style="font-size: 0.675em; white-space: nowrap; float: right; text-align: right;">
-            <span>Game server: ${CONFIG['server']['meta']['game_server']}</span><br/>
+            <span>Game server: ${CONFIG['meta']['game_server']}</span><br/>
             <span>All timestamps displayed in your local time</span><br/>
         </div>
         <div style="font-style: italic; font-size: 0.675em; white-space: nowrap; float: left;">
