--- a/mako_templates/moderators.html
+++ b/mako_templates/moderators.html
@@ -3,7 +3,7 @@
 <div class="about-topic">
     <span class="about-header">What are moderators?</span><br/>
     Moderators are volunteers responsible for ensuring the integrity of price
-    data and controlling user access to ${CONFIG['server']['meta']['site_name']}.
+    data and controlling user access to ${CONFIG['meta']['site_name']}.
     <br/><br/>
     Moderators will only approve your registration if your in-game name matches
     that with which you registered.
