--- a/mako_templates/header.html
+++ b/mako_templates/header.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>${CONFIG['meta']['site_name']} - ${page['title']}</title>
+        <title>${CONFIG['meta']['site_name']} - ${rendering['title']}</title>
         <link rel="icon" href="/static/favicon.ico">
         <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
         <script src="/static/formatting.js"></script>
-        %for header in page['header_extra']:
-            ${header}
-        %endfor
         <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"/>
         <link rel="stylesheet" type="text/css" href="/static/style.css"/>
+        %for header in rendering['html_headers']:
+            ${header}
+        %endfor
     </head>
     <body>
         <div>
@@ -43,9 +43,10 @@
                 %if role['active']:
                     <script>
                         $(function(){
-                            var items = [${','.join('"{item}"'.format(item=i) for i in page['all_item_names'])}];
                             $("#itemselect").autocomplete({
-                                source: items
+                                source: "/items/query-names",
+                                delay: 300,
+                                minLength: 4
                             });
                         });
                     </script>
