--- a/mako_templates/header.html
+++ b/mako_templates/header.html
@@ -44,7 +44,7 @@
                     <script>
                         $(function(){
                             $("#itemselect").autocomplete({
-                                source: "/items/query-names",
+                                source: "/items/ajax-query-names",
                                 delay: 300,
                                 minLength: 4
                             });
