--- a/mako_templates/flags.html
+++ b/mako_templates/flags.html
@@ -8,7 +8,7 @@
         <ul class="ffxiv-list">
             %for (i, flag) in enumerate(flags):
                 <li id="flg-${i}">
-                    <a href="/items/${flag.item.id}">${flag.item.name | h}</a>
+                    <a href="/items/${flag.item.id}">${getattr(flag.item.name, identity['language']) | h}</a>
                     @ ${flag.item.price.value}
                     ${render_timestamp(flag.item.price.timestamp)}<br/>
                     Submitted by <a href="/users/${flag.item.price.reporter.id}">${flag.item.price.reporter.anonymous and '<i>' or ''}${flag.item.price.reporter.name}${flag.item.price.reporter.anonymous and '</i>' or ''}</a><br/>
