Item-pages with no data should now render, even if they're hideous

--- a/mako_templates/item.html
+++ b/mako_templates/item.html
@@ -82,7 +82,11 @@
         </span>
     </form>
     <div style="font-size: 1.25em;">
-        ${render_price_point(item_id, prices.next(), 'rct', reload_on_delete=True)}<br/>
+        %if price_data:
+            ${render_price_point(item_id, prices.next(), 'rct', reload_on_delete=True)}<br/>
+        %else:
+            <span class="nodata">No data</span>
+        %endif
     </div>
     <div>
         %if watching:
